Simplify grouped vocabulary select and fix invisible menu item hover

--- a/Wordfolio.Frontend/src/shared/components/GroupedVocabularySelect.module.scss
+++ b/Wordfolio.Frontend/src/shared/components/GroupedVocabularySelect.module.scss
@@ -1,7 +1,3 @@
 .groupHeader {
-    margin-top: 4px;
-}
-
-.groupHeaderSpaced {
-    margin-top: 12px;
+    padding-left: 16px !important;
 }
